main/default/objects/Pharos_Settings__c/fields/Archival_Scheduler_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>Archival_Scheduler_Cron_Exp__c</fullName>
    <label>Bulk API Jobs Frequency Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>