main/default/objects/Pharos_Settings__c/fields/Custom_Error_Parser__c.field-meta.xml
<CustomField>
    <fullName>Custom_Error_Parser__c</fullName>
    <label>Custom Error Parser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>