main/default/objects/Pharos_Settings__c/fields/EnableForecast__c.field-meta.xml
<CustomField>
    <fullName>EnableForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables the forecast functionality</description>
    <inlineHelpText>Check this box to enable forecast functionality</inlineHelpText>
    <label>Enable Forecast</label>
    <type>Checkbox</type>
</CustomField>