main/default/objects/Pharos_Settings__c/fields/EnableNotificationCharts__c.field-meta.xml
<CustomField>
    <fullName>EnableNotificationCharts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables the display of auto-generated charts in notifications</description>
    <inlineHelpText>Check this box to enable the display of auto charts in notifications</inlineHelpText>
    <label>Enable Notification Charts</label>
    <type>Checkbox</type>
</CustomField>