main/default/objects/Pharos_Settings__c/fields/Error_Email_Report_Batch_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Report_Batch_Cron_Exp__c</fullName>
    <label>Error Email Report Batch Frequency Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>