main/default/objects/Pharos_Settings__c/fields/Jira_Scheduler_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>Jira_Scheduler_Cron_Exp__c</fullName>
    <label>Jira Resolution Frequency Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>