main/default/objects/Pharos_Settings__c/fields/Log_Post_Processing_Batch_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>Log_Post_Processing_Batch_Cron_Exp__c</fullName>
    <label>Log Post Processing Frequency Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>