main/default/objects/Pharos_Settings__c/fields/Log_Service_Scheduler_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>Log_Service_Scheduler_Cron_Exp__c</fullName>
    <label>Log Service Scheduler Start Minutes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>