main/default/objects/Pharos_Settings__c/fields/Slack_App_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Slack_App_Client_Secret__c</fullName>
    <label>Slack App Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>